<resources>
    <!-- APP -->
    <string name="app_name">RickAndMorty</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Content Descriptions -->
    <string name="character_image_content_description">Character image</string>
    <string name="loader_gif_content_description">Loader gif</string>

    <!-- Characters -->
    <string name="characters_fragment">Characters</string>
    <string name="character_info">%1$s, %2$s</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="first_episode">First episode:</string>
    <string name="search">Search</string>

    <!-- Locations -->
    <string name="locations_fragment">Locations</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>

    <!-- Episodes -->
    <string name="episodes_fragment">Episodes</string>
    <string name="air_date">Air date:</string>
    <string name="episode_code">Episode code:</string>

    <!-- Error -->
    <string name="error_title">Ooh, sh**!!</string>
    <string name="error_body">Nothing found for "%1$s"</string>
</resources>
