<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="View"
            type="android.view.View" />

        <variable
            name="fragment"
            type="com.diego.matesanz.rickandmorty.screens.menu.episodes.EpisodesFragment" />

        <variable
            name="viewModel"
            type="com.diego.matesanz.rickandmorty.screens.menu.episodes.EpisodesViewModel" />

        <variable
            name="selectedEpisode"
            type="com.diego.matesanz.rickandmorty.data.model.Episode" />

        <variable
            name="showInfo"
            type="Boolean" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="isEmptyResults"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:context=".screens.menu.episodes.EpisodesFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraints"
            android:padding="@dimen/padding_xx_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_title"
                    style="@style/HeadingSmall"
                    android:layout_width="@dimen/match_constraints"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_xx_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/episodes_fragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_search"
                    style="@style/SearchInputLayout"
                    android:layout_width="@dimen/match_constraints"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_xx_small"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_search"
                        style="@style/SearchEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSearch"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_episodes"
                    episodes="@{viewModel.episodesList}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:visibility="@{isEmptyResults ? View.GONE : View.VISIBLE}"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_search"
                    tools:listitem="@layout/layout_character_item"
                    tools:visibility="gone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xx_small"
                    android:visibility="@{isEmptyResults ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_search">

                    <ImageView
                        android:id="@+id/error_gif"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/loader_gif_content_description"
                        android:src="@drawable/rick_and_morty_error"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_error_title"
                        style="@style/HeadingError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xx_small"
                        android:text="@string/error_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/error_gif" />

                    <TextView
                        android:id="@+id/text_view_error_body"
                        style="@style/BodyError"
                        searchText="@{viewModel.searchingText}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xxx_small"
                        android:text="@string/error_body"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_view_error_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/layout_episode_info"
            layout="@layout/layout_episode_info"
            android:visibility="@{showInfo ? View.VISIBLE : View.GONE}"
            app:episode="@{selectedEpisode}"
            app:fragment="@{fragment}"
            tools:visibility="gone" />

        <include
            android:id="@+id/layout_loader"
            layout="@layout/layout_loader"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
